<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/arFragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dwarfAxe"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/dwarf_axe_miniature"
                android:src="@drawable/dwarf_axe" />

            <ImageView
                android:id="@+id/dwarfBomb"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/dwarf_bomb_miniature"
                android:src="@drawable/dwarf_bomb" />

            <ImageView
                android:id="@+id/elf"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/elf_archer_miniature"
                android:src="@drawable/elf" />

            <ImageView
                android:id="@+id/goblin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/goblin_miniature"
                android:src="@drawable/goblin" />

            <ImageView
                android:id="@+id/horseKnight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/horse_knight_miniature"
                android:src="@drawable/horse_knight" />

            <ImageView
                android:id="@+id/knight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/knight_miniature"
                android:src="@drawable/knight" />

            <ImageView
                android:id="@+id/orc"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/orc_miniature"
                android:src="@drawable/orc" />

            <ImageView
                android:id="@+id/troll"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/troll_miniature"
                android:src="@drawable/troll" />

            <ImageView
                android:id="@+id/wizard"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="modelPick"
                android:contentDescription="@string/wizard_miniature"
                android:src="@drawable/wizard" />

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/roll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:onClick="rollDice"
        android:text="@string/roll"
        android:textColor="#000000"
        android:backgroundTint="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/d20_dice"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:background="@null"
        android:contentDescription="@string/d20_dice_image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/d20_20" />

</androidx.constraintlayout.widget.ConstraintLayout>